--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,14 @@
 backend:
   name: git-gateway
+  repo: coalmarketing/antikor
+  branch: main
+  commit_messages:
+    create: 'Create {{collection}} “{{slug}}”'
+    update: 'Update {{collection}} “{{slug}}”'
+    delete: 'Delete {{collection}} “{{slug}}”'
+    uploadMedia: '[skip ci] Upload “{{path}}”'
+    deleteMedia: '[skip ci] Delete “{{path}}”'
+
 local_backend: true
 
 media_folder: "public/uploads"
