feat (about): about us page added and gallery with decap integration
Introduces an "About Us" page with company information and core values.

Implements a gallery section, fetching images from markdown files.

Renames the "Kariera" page component for clarity and updates the blog page title.

Enhances blog post card styling with a subtle hover effect.

Prevents the "hero-polygon-3" div from interfering with mouse events on the homepage.

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -39,3 +39,13 @@ collections:
       - { label: "Lokalita", name: "location", widget: "string", required: false }
       - { label: "Typ úvazku", name: "type", widget: "string", required: false }
       - { label: "Zveřejněno", name: "published", widget: "boolean", default: true }
+
+  - name: "gallery"
+    label: "Galerie"
+    folder: "content/gallery"
+    create: true
+    slug: "{{slug}}"
+    preview: true
+    fields:
+      - { label: "Název obrázku", name: "title", widget: "string" }
+      - { label: "Obrázek", name: "image", widget: "image" }
