--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
-    "next": "15.3.1",
+    "next": "^16.1.2",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
