--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-lite-youtube-embed": "^3.3.3",
     "react-markdown": "^10.1.0",
     "react-wrap-balancer": "^1.1.1",
     "remark-gfm": "^4.0.1",
